--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 
 
- 
+ <!-- chaitanya -->
     <section id="home" class="hero">
         <div class="container-fluid px-5">
             <div class="row align-items-center">
